# RedteamAgent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh.md  install.ps1  install.sh  opencode.json
.opencode/: opencode.json
.opencode/commands/: queue.md  (+11 more)
agent/: .env.example  AGENTS.md  CLAUDE.md  operator-core.md
docker/: docker-compose.yml
local-hermes-agent/: README.md
local-openclaw/: README.md
orchestrator/: run.sh  stop.sh
orchestrator/backend/: pyproject.toml
orchestrator/backend/app/: config.py  db.py  main.py  security.py  ws.py
orchestrator/backend/app/api/: auth.py  cases.py  dispatches.py  documents.py  events.py  projects.py  runs.py
orchestrator/backend/app/models/: event.py  project.py  run.py
orchestrator/backend/app/services/: artifacts.py  event_apply.py  events.py  keepalive.py  launcher.py  projects.py  run_summary.py  runs.py
orchestrator/backend/tests/: conftest.py  test_artifacts.py  test_auth.py  test_cases.py  test_db.py  test_dispatches.py  test_documents.py  test_e2e_structured_events.py  test_event_apply.py  test_events.py  test_events_structured.py  test_exploit_prompt_guardrails.py  test_launcher.py  test_operator_prompt_render.py  test_project_config.py  test_project_crud_api.py  test_projects.py  test_runs.py  test_scaffold.py  test_summary.py  test_surface_aliases.py  test_ws.py
references/: INDEX.md
scripts/: dispatcher.sh  fetch_batch_to_file.sh  katana_ingest.sh  proxy_addon.py  recon_ingest.sh  start_katana_ingest_background.sh
tests/: test_engage_contracts.sh  test_operator_recall_closure_contract.py
(+481 files in other folders)
